--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.19.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+  "node-telegram-bot-api": "^0.66.0"
   }
 }
 
