--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express": "^4.19.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.8",
-  "node-telegram-bot-api": "^0.66.0"
+    "axios": "^1.6.8"
   }
 }
 
